apps/qbittorrent/qbittorrent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: ghcr.io/linuxserver/qbittorrent:latest
        ports:
        - containerPort: 8080
        - containerPort: 6881
        - containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        hostPath:
          path: /home/pi/qbittorrent/config
          type: DirectoryOrCreate
      - name: downloads
        hostPath:
          path: /home/pi/qbittorrent/downloads
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
    nodePort: 32080
  - name: torrent-tcp
    port: 6881
    targetPort: 6881
    nodePort: 32681
  - name: torrent-udp
    port: 6881
    targetPort: 6881
    nodePort: 32682
    protocol: UDP
